# przydasie

./: README.md
obligacje/: README.md  Taskfile.yaml  pyproject.toml
obligacje/obligacje/: obligacje.py
