[tool.poetry]
name = "obligacje"
version = "0.1.0"
description = ""
authors = ["Paweł Wacławczyk <p.a.waclawczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
